webcleaner (0.24) unstable; urgency=low

  * htmlsax.c: set default encoding to latin-1, because some pages dont
    set the correct charset
  * new config option: log HTML errors

 -- Bastian Kleineidam <calvin@debian.org>  Fri,  9 Nov 2001 22:24:52 +0100

webcleaner (0.23) unstable; urgency=low

  * htmlparser.c: fix segfault in character encoding

 -- Bastian Kleineidam <calvin@debian.org>  Wed,  7 Nov 2001 22:00:54 +0100

webcleaner (0.22) unstable; urgency=low

  * implemented header logging
  * print HTML parser errors to stderr
  * fixed broken header parsing
  * propagate Python exceptions in the HTML parser
  * encode UTF-8 chars to HTML in the HTML parser
  * misc cleanups and corrections for the release
  * add stubs for the wcheaders tool
  * do not suppress DOCTYPE tags

 -- Bastian Kleineidam <calvin@debian.org>  Tue,  6 Nov 2001 15:51:30 +0100

webcleaner (0.21) unstable; urgency=low

  * fix AssertionError in ServerPool: dont unregister servers twice
  * add webcleaner.conf manpage

 -- Bastian Kleineidam <calvin@debian.org>  Sat,  3 Nov 2001 00:39:26 +0100

webcleaner (0.20) unstable; urgency=low

  * documentation updates
  * removed debian/conffile and debian/webcleanerconf.dirs
  * use Python2.1 in Debian scripts
  * new HTML parser based on libxml2
  * add bzip encoding for .bz2 files

 -- Bastian Kleineidam <calvin@debian.org>  Thu,  1 Nov 2001 20:12:26 +0100

webcleaner (0.19) unstable; urgency=low

  * htmlop.l:
    use my own strncasecmp function
    force 8bit option in lexer
  * correct use of logfiles in Debian init.d script
  * minor code cleanups
  * help for french output in .bat files
  * added webcleanerconf.bat

 -- Bastian Kleineidam <calvin@debian.org>  Mon, 22 Oct 2001 11:21:12 +0200

webcleaner (0.18) unstable; urgency=low

  * fixes for debian install scripts
  * flush logfile when logging
  * fix log format
  * norm config_dir path in configdata for platform independency
  * HTML parser:
    require Python >= 2.0