@@ -151,9 +151,8 @@ characters ('\n\n',)
 comment (' illegal binary chars (see source) ',)
 characters ('\nThese &#145;Microsoft chars&#145; are history.\n&#132;Retter&#132; Majak trifft in der Schlussminute.\n\n',)
 startElement ('script', {'defer': None, 'type': 'text/javascript'})
-cdataBlock ('\n',)
-comment (' \nself.document.write("<b></b>");\n// end of script. ',)
-cdataBlock ('\n',)
+error (82, 25, "invalid '</b' endtag in script\n")
+cdataBlock ('\n<!-- \nself.document.write("<b></b>");\n// end of script. -->\n',)
 endElement ('script',)
 characters ('\n\n',)
 comment (' bad quote in tag attributes ',)
